--- a/home.html
+++ b/home.html
@@ -173,8 +173,8 @@
 
     <br>
     <br>
-    <!-- <h1> -->
-      <!-- <span class="css-1imhxhw">Alexa Skills Competition.<span>&lowast;</span></span>
+    <h1>
+      <span class="css-1imhxhw">Alexa Skills Competition.<span>&lowast;</span></span>
     </h1>
     <div id="about-content" class="content">
       <p>It's time for you to unleash the maker skills.<br>
@@ -184,7 +184,7 @@
       </p><br>
       <a href="https://summer.hackclub.com/" class="css-1gjga9w">Apply</a>
 
-    </div> -->
+    </div>
     <br>
 
     <br>
